# audit_log/app.py
@@ -119,6 +119,9 @@ def get_weather_recording(index):
     logger.error("Could not find weather condition recording at index %d" % index)
     return { "message": "Not Found"}, 404
 
+def get_health():
+    return 200
+
 app = connexion.FlaskApp(__name__, specification_dir='')
 if "TARGET_ENV" not in os.environ or os.environ["TARGET_ENV"] != "test":
     CORS(app.app)
