# receiver/app.py
@@ -112,6 +112,8 @@ def record_weather_condition(body):
 
     return NoContent, 201
 
+def get_health():
+    return 200
 
 app = connexion.FlaskApp(__name__, specification_dir='')
 app.add_api("openapi.yml", base_path="/receiver",
