# receiver/openapi.yml
@@ -48,6 +48,16 @@ paths:
           description: item created
         "400":
           description: "invalid input, object invalid"
+  /health:
+    get:
+      summary: Gives health status 
+      description: Gives health status
+      operationId: app.get_health
+      responses:
+        "200":
+          description: "Service running"
+        "400":
+          description: "Service not running"
 components:
   schemas:
     TemperatureRecording:
